--- a/src/styles/Book.css
+++ b/src/styles/Book.css
@@ -1,12 +1,13 @@
 .Lesson-Panel {
-    height: 10.625rem;
+    height: 9rem;
     margin-bottom: 1.5rem;
     padding: 2rem 9.188rem 1.625rem 1.688rem;
     border-radius: 4px;
     border: solid 1px #e8e8e8;
     background-color: var(--white);
     display: flex;
-    justify-content: space-between
+    justify-content: space-between;
+    align-items: center
   };
 
   .chart{
@@ -64,4 +65,24 @@
 
   .delete-area{
     color: #4386bf;
+  }
+
+  .delete-area span{
+    margin-right: 20px;
+  }
+
+  .remove {
+    width: 3.375rem;
+    height: 1.188rem;
+    margin-right: 20px;
+    font-family: RobotoSlab;
+    font-size: 0.875rem;
+    font-weight: 300;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    color: #4386bf;
+    background-color: transparent;
+    border: none;
   }
