Stylle percentage area

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,14 +1,19 @@
 .react-logo {
   height: 10vmin;
-  margin-left: auto !important; 
+  margin-left: auto !important;
   pointer-events: none;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   margin: 0;
 }
 
-.backBG{
+.backBG {
   padding: 8em 4em;
 }
 
@@ -26,36 +31,44 @@ h1, h2, h3, h4, h5, h6 {
   text-transform: uppercase;
 }
 .text-grey { color: #888; }
+
 .bg-white {
-  background-color: #FFF;
+  background-color: #fff;
 }
+
 .bg-grey {
   background-color: #fafafa;
 }
+
 .bg-dark-grey {
   background-color: #f3f4f8;
 }
 
-.border-top {  border-top: 1px solid #DFDFDF; padding-top: 1.5em;}
+.border-top { border-top: 1px solid #dfdfdf; padding-top: 1.5em; }
+
 .round-top {
   border-radius: 0.3em 0.3em 0 0;
 }
+
 .round-bottom {
   border-radius: 0 0 0.3em 0.3em;
 }
 
-button { cursor: pointer ;}
+button { cursor: pointer; }
+
 button:disabled {
-  color: #CCC;
-  cursor: not-allowed;  
+  color: #ccc;
+  cursor: not-allowed;
 }
 
 .m-b {
   margin-bottom: 4px;
 }
+
 .text-center {
   text-align: center;
 }
+
 .center {
   margin: auto;
 }
@@ -63,17 +76,17 @@ button:disabled {
 .flex-row {
   align-items: center;
   display: flex;
-  flex-wrap: wrap;  
-  justify-content: flex-start;  
+  flex-wrap: wrap;
+  justify-content: flex-start;
 }
 
 .flex-row * {
   margin: 5px 5px 5px 5px;
-  padding: 5px  0px 5px 0px;  
+  padding: 5px  0 5px 0;
 }
 
 .box-shadow {
-  box-shadow: 0px 42px 20px #DDD;
+  box-shadow: 0 42px 20px #ddd;
 }
 
 .App {
@@ -84,8 +97,8 @@ button:disabled {
 @media screen and (max-width: 720px) {
   .flex-row * { margin: 5px 0; }
   .react-logo { order: 2; }
-  .max-width-90 { width: 99%; margin: auto;}
-  .backBG { padding: 0;}
+  .max-width-90 { width: 99%; margin: auto; }
+  .backBG { padding: 0; }
   .container { max-width: none; }
 }
 
@@ -109,6 +122,7 @@ button:disabled {
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
