--- a/src/styles/BookList.css
+++ b/src/styles/BookList.css
@@ -37,33 +37,6 @@
   text-align: left;
 }
 
-#right button {
-  background-color: #0290ff;
-  border: none;
-  border-radius: 0.35em;
-  color: #fff;
-  cursor: not-allowed;
-  padding: 8px 22px;
-}
-
-.category {
-  color: grey;
-  font-family: Arial;
-  font-weight: 800;
-  margin-bottom: -2px;
-}
-
-.title {
-  margin-bottom: -4px;
-}
-
-.author {
-  color: #3a82b9;
-  font-weight: 400;
-  margin-bottom: 12px;
-}
-.actions { text-align: left; }
-
 .actions button {
   background-color: transparent;
   border: none;
@@ -80,6 +53,35 @@
   margin: 0 8px;
   padding: 0 8px;
 }
+
+#right button {
+  background-color: #0290ff;
+  border: none;
+  border-radius: 0.35em;
+  color: #fff;
+  cursor: not-allowed;
+  padding: 8px 22px;
+}
+
+.CATEGORIES {
+  color: grey;
+  font-family: Arial, sans-serif;
+  font-weight: 800;
+  margin-bottom: -2px;
+  border: none;
+}
+
+.title {
+  margin-bottom: -4px;
+}
+
+.author {
+  color: #3a82b9;
+  font-weight: 400;
+  margin-bottom: 12px;
+}
+.actions { text-align: left; }
+
 .percent { padding-left: 12px; }
 
 .percentage {
@@ -108,18 +110,4 @@
   border-radius: 50%;
   border-right: 10px solid #2274ee;
   border-bottom: 10px solid #2274ee;
-}
-
-/* Small screens less than 720px */
-@media screen and (max-width: 720px) {
-  .actions button:nth-child(2) { padding: 6px; margin: 0; }
-  .bookSection { padding: 6px; }
-  .book { flex-wrap: wrap; }
-  .app-title { flex-basis: 80%; font-size: 8vmin; text-align: right; }
-  #left { flex-basis: 100%; text-align: center; }
-  .actions { text-align: center; }
-  #center { flex-basis: 100%; padding: 12px 0; border-right: none; margin-top: 0.8em; margin-bottom: 0.8em; }
-  .categories { text-align: center; flex-basis: 100%; order: 3; }
-  .cat-title { display: none; }
-  #right { flex-basis: 100%; text-align: center; padding-left: 0; }
 }
